# TheZorp-

./: README.md  pyproject.toml
.github/workflows/: ci.yml
zorplife/: __init__.py  __main__.py  config.py
zorplife/agents/: __init__.py  components.py
zorplife/core/: __init__.py  brain.py  components.py  engine.py  systems.py  zorp.py
zorplife/tests/perf/: test_tick_time.py
zorplife/tests/world/: test_mapgen.py
zorplife/ui/: __init__.py  camera.py  sprites.py
zorplife/world/: __init__.py  mapgen.py  tiles.py  world.py
